# mujoco_cpp_template

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
assets/data/: results.m
common/include/: eigen_test.hpp
common/include/controller/: ComputedTorqueController.hpp  ComputedTorquecontroller.hpp
common/include/motion/: TrajectoryGenerator.hpp
common/include/robot/: DoublePendulumModel.hpp
common/include/utilities/: save_data.hpp
common/src/controller/: ComputedTorqueController.cpp
common/src/motion/: TrajectoryGenerator.cpp
common/src/robot/: DoublePendulumModel.cpp
common/src/utilities/: save_data.cpp
src/: main.cc  simulate.cc
